# MT

./: .gitmodules  README.md  dp_assignment.txt
broker_lb/: CMakeLists.txt  common.h  measure.sh  simulator.cpp
broker_lb/plots/: plot-lb-efficiency.r
broker_lb/queue_managers/: earliest_deadline_first_policy.h  fifo_policy.h  multi_queue_manager.h  processing_time_estimators.h  shortest_processing_time_first_policy.h  single_queue_manager.h
broker_lb/setups/: simple+para_large.yml  simple+para_small.yml  test.yml  two-types-large.yml  two_types_small.yml  uniform_large.yml  uniform_small.yml
broker_lb/workloads/: test.csv
broker_lb/workloads/generators/: common.py  multi_type.py  simple+para.py  two_phase.py
containers/: CMakeLists.txt  README.md  benchmark.cpp  common.cpp  common.h  oci-image-fetch-main.cpp  oci-image-fetch.cpp  oci-image-fetch.h  oci-image-mount-main.cpp  oci-image-mount.cpp  oci-image-mount.h  oci-image-unpack-main.cpp  oci-image-unpack.cpp  oci-image-unpack.h
containers/plots/: mount-vs-unpack.tex  plot-mount-vs-unpack.r
drafts/: autoscaling.md  cloud_providers.md  links.md  scheduling.md  stability_measurements.md  thesis-ideas.md
measurement_stability/: .dockerignore  README.md  build_docker.sh  generate_data.sh  run_vbox.sh  start_vbox.sh  stop_vbox.sh  workloads_bsearch.txt  workloads_lite.txt
measurement_stability/docker/: Dockerfile
measurement_stability/plots/: calculate-parallel-ratios.py  check-warmup.r  compare-isolate-ci.r  compare-taskset.r  compare-virt-ci.r  plot-cache-miss-ratios.r  plot-dependence-on-input.r  plot-means-by-setup-size.r  plot-paralelization.r  plot-parallel-ratios.r  plot.r  stability_plots.sh  time-isolate-vs-bare.r
measurement_stability/runners/: run_isolate.sh
measurement_stability/workloads/: common.c
measurements/: README.md  build_docker.sh  build_vbox.sh  distribute_workers.sh  measure_all.sh  measure_dependence_on_input.sh  measure_parallel_homogenous.sh  measure_parallel_synth_stress.sh  measure_workload.sh  run_docker.sh  run_vbox.sh  workloads.txt  workloads_bsearch.txt  workloads_lite.txt  workloads_medium.txt
measurements/docker/: Dockerfile
measurements/plots/: calculate-parallel-ratios.py  check-parallel-runs.py  check-warmup.r  check_warmup.r  compare-bootstrap-means.r  compare-bootstrap-sd.r  compare-isolate-ci.r  compare-isolation.py  compare-isolation.r  compare-parallel-workers.r  compare-taskset.r  compare-virt-ci.r  helpers.py  helpers.r  plot-cache-miss-ratios.r  plot-dependence-on-input.r  plot-means-by-setup-size.r  plot-parallel-ratios.r  plot-perf.r  plot.r  stability-illustration.r  stability_plots.sh  time-isolate-vs-bare.r  time_isolate_vs_bare.r
measurements/runners/: perf_wrapper.sh  run_baremetal.sh  run_isolate.sh
measurements/workloads/: Makefile  common.c
plot_helpers/: helpers.r
scheduling/: .clang-format  CMakeLists.txt  README.md  common.h  measure.sh
scheduling/plots/: plot-lb-efficiency.r
scheduling/queue_managers/: multi_queue_manager.h  single_queue_manager.h
scheduling/setups/: multiple_types.yml  two_types_large.yml  uniform_large.yml
stability_report/: text.md
submission_data/: dump.sh  plot_estimation_accuracy.r  plot_processing_times.r  plot_submission_times.r  predict_processing_times.py  stats.py
text/: Makefile  filters.py  literature.bib  macros.tex  pdfa.xmpi  thesis.tex  thesis.xmpdata
text/chapters/: 000_introduction.md  050_evaluation_system.md  100_measurement_stability.md  110_analysis.md  120_checks.md  130_evaluation.md  140_stability_conclusion.md  200_scaling.md  200_scheduling.md  210_platform_comparison.md  210_scheduling_problem_categorization.md  220_policy_evalution.md  220_scheduling_analysis.md  230_scheduling_related_work.md  235_scheduling_custom_algs.md  (+29 more)
user_behavior/: README.md  collect_runtimes.py  dump.sql  utils.py
(+74 files in other folders)
